# fapiaoshibie

./: .gitignore  INSTALL.md  README.md  invoice_extractor.py  invoice_gui.py  invoice_macos_dialog.py  run.py  run_macos.command  run_windows.bat  start.py
.github/workflows/: release.yml
invoice_rust/: .gitignore  Cargo.toml  README.md  UI_DESIGN.md  run.bat  run.sh
invoice_rust/docs/: UI_IMPLEMENTATION.md  发票识别工具UI和UX优化设计方案.md
invoice_rust/src/: extractor.rs  gui.rs  main.rs
pack/: README.md  requirements-pack.txt
pack/build_scripts/: build_macos.sh  build_windows.bat
pack/config/: pyinstaller_macos.spec  pyinstaller_windows.spec
pack/hooks/: hook-invoice_extractor.py
pack/output/macos/发票提取器/: 发票提取器
pack/output/macos/发票提取器.app/Contents/: Info.plist
pack/output/macos/发票提取器.app/Contents/Frameworks/: invoice_extractor.py
pack/output/macos/发票提取器.app/Contents/MacOS/: 发票提取器
pack/output/macos/发票提取器.app/Contents/Resources/: app.icns
pack/output/macos/发票提取器.app/Contents/_CodeSignature/: CodeResources
pack/resources/: Info.plist
pack/resources/icons/: README.md  app.icns.bak
